--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A bot for CIRT",
   "main": "index.js",
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,11 +14,11 @@
   "author": "Prem",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "botlib": "file:../botlib",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "fb-messenger": "^2.3.1",
-    "mustache": "^3.0.0"
+    "body-parser": "1.18.3",
+    "botlib": "github:premanandgit/botlib#master",
+    "express": "4.16.3",
+    "express-session": "1.15.6",
+    "fb-messenger": "2.3.1",
+    "mustache": "3.0.0"
   }
 }
